--- a/ureport/templates/spikes/ureport_registration.html
+++ b/ureport/templates/spikes/ureport_registration.html
@@ -4,10 +4,8 @@
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="http://openlayers.org/api/2.11-rc1/OpenLayers.js?1123"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/map.js"></script>
-    <link rel="stylesheet" href="//cdn.oesmith.co.uk/morris-0.4.1.min.css">
+    <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/highcharts.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-    <script src="//cdn.oesmith.co.uk/morris-0.4.1.min.js"></script>
 
     {{ block.super }}
 {% endblock %}
@@ -23,37 +21,42 @@
                     url: "http://127.0.0.1:8000/mjspike",
                     data: {'start_date': start_date, 'end_date': end_date},
                     success: function (data) {
-                        new Morris.Line({
-                            element: 'myfirstchart',
-                            data: data,
-                            xkey: 'date',
-                            ykeys: ['count'],
-                            labels: ['Number of Registrations']
-                        });
-                    }
-                });
+                        console.log(data);
+                        chart = new Highcharts.Chart({
+                                    chart: {
+                                        renderTo: 'myfirstchart',
+                                        type: 'line'
+                                    },
+                                    title: {
+                                        text: 'User Registrations'
+                                    },
+                                    xAxis: {
+                                        categories: data.keys
+                                    },
+                                    yAxis: {
+                                        title: {
+                                            text: 'Number of Registrations'
+                                        }
+                                    },
+                                    plotOptions: {
+                                        line: {
+                                            dataLabels: {
+                                                enabled: true
+                                            },
+                                            enableMouseTracking: false
+                                        }
+                                    },
+                                    series: [
+                                        {
+                                            name: 'Date',
+                                            data: data.counts
+                                        }
+                                    ]
+                                }
+                        )
+                    }});
+
             });
-            $("select#missing").change(function () {
-                var value = $(this).val();
-                $('#pie').html('');
-                $.ajax({
-                    dataType: "json",
-                    url: "http://127.0.0.1:8000/mjspike_missing",
-                    data: {'field': value},
-                    success: function (data) {
-                        Morris.Donut({
-                            element: 'pie',
-                            data: [
-                                {label: "URpeort Contacts Missing " + value, value: data.percentage},
-                                {label: "URpeort Contacts with " + value, value: 100 - data.percentage}
-
-                            ]
-                        });
-                    }
-                });
-            }).change();
-
-
         });
     </script>
 {% endblock %}
